tests/golden/repl/rewind.stderr
F u g u e   R E G O   T o o l k i t
fregot v0.14.2 repl - use :help for usage info
Set breakpoint at rewind.crashing_rule
fregot (eval error):
  "rewind.rego" (line 5, column 3):
  builtin error:

    5|   x + input.msg with input as {"msg": "crash"}
         ^^^^^^^^^^^^^

  Expected number but got string

  Stack trace:
    rule rewind.crashing_rule at data.rewind.crashing_rule:1:1
Set breakpoint at rewind.failing_rule
